<resources>
    <string name="app_name">RickyBooks</string>
    <string name="title_home">Home</string>
    <string name="title_buy">Buy</string>
    <string name="title_messages">Messages</string>
    <string name="title_sell">Sell</string>
    <string name="title_profile">Profile</string>
    <string name="logo_description">RickyBooks logo</string>
    <string name="bio_text">
        Hi, my name is Ricky Dam. I\'m a 4th year Computer Engineering student here at Carleton
        University.
        \n\nCarleton University needed a better way for students to buy and sell textbooks. So here
        it is. Enjoy!
        \n\nNo affiliation with Carleton University.
        \n\nThis app is open-source. Feel free to contribute!
    </string>
    <string name="bio_description">Introduction text about RickyBooks</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string-array name="edition">
        <item>Edition</item>
        <item>Custom Edition</item>
        <item>Global Edition</item>
        <item>1st Edition</item>
        <item>2nd Edition</item>
        <item>3rd Edition</item>
        <item>4th Edition</item>
        <item>5th Edition</item>
        <item>6th Edition</item>
        <item>7th Edition</item>
        <item>8th Edition</item>
        <item>9th Edition</item>
        <item>10th Edition</item>
        <item>11th Edition</item>
        <item>12th Edition</item>
        <item>13th Edition</item>
        <item>14th Edition</item>
        <item>15th Edition</item>
    </string-array>
    <string-array name="condition">
        <item>Condition</item>
        <item>New</item>
        <item>Like New</item>
        <item>Good</item>
        <item>Okay</item>
        <item>Bad</item>
    </string-array>
    <string name="course_hint">Course (Ex: SYSC4504)</string>
    <string-array name="type">
        <item>Type</item>
        <item>Paperback</item>
        <item>Hardcover</item>
        <item>Looseleaf</item>
    </string-array>
    <string name="price_hint">$ Price (Ex: 100)</string>
    <string name="submit">SUBMIT</string>
    <string name="textbook_image_description">Textbook image</string>
    <string name="hardcoded_seller">Ricky Dam</string>
    <string name="name_hint">First and Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="passwordC_hint">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="login_button">LOG IN</string>
    <string name="account_intro_message">
        Want to sell a textbook?
        \nCustomers need to contact you!
        \n\nWant to buy a textbook?\nYou need to send messages!
        \n\nYou also need notifications!
        \n\nWhich is why you need to register for an account!
        \n\nOr, if you already joined the club, welcome back!\n
    </string>
    <string name="logout_button">LOG OUT</string>
    <string name="type_message_hint">Type a message&#8230;</string>
    <string name="send_message_hint">SEND</string>
    <string name="message_button">MESSAGE</string>
    <string name="choose_image_button_text">CHOOSE IMAGE</string>
    <string name="delete_image_button_text">DELETE IMAGE</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_textbook">Delete Textbook</string>
    <string name="save_button_text">SAVE</string>
    <string name="menu_search_title">Search Textbooks</string>
    <string name="search_input_hint">Search…</string>
    <string-array name="search">
        <item>Category</item>
        <item>Title</item>
        <item>Author</item>
        <item>Edition</item>
        <item>Condition</item>
        <item>Type</item>
        <item>Course</item>
    </string-array>
    <string name="menu_clearall_title">Clear All</string>
    <string name="menu_delete_conversation">Delete Conversation</string>
    <string name="edit_textbook_instruction">Tap on a textbook to edit.</string>
    <string name="details_image_instruction">Tap on the image to enlarge.</string>
    <string name="conversation_placeholder_name">Other User\'s Name</string>
    <string name="conversation_placeholder_timestamp">Last message date</string>
    <string name="conversation_placeholder_preview">Last message preview</string>
    <string name="menu_notifyme_title">NOTIFY ME</string>
    <string name="add_item_button_text">Add item</string>
    <string name="notify_item_placeholder_category">Category</string>
    <string name="notify_item_placeholder_input">Input</string>
    <string name="menu_delete_notify_item_title">Delete Notify Item</string>
</resources>
