<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_buy"
        android:icon="@drawable/ic_buy"
        android:title="@string/title_buy" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_sell"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
