<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:baselineAligned="false"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/account_intro_message"
        android:textSize="16sp" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_width="wrap_content">
            <Button
                android:background="@drawable/button_blue"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/account_register_button"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_width="wrap_content">
            <Button
                android:background="@drawable/button_blue"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/account_login_button"
                android:layout_centerHorizontal="true"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:text="@string/login_button"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="ButtonStyle" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>