<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="?android:attr/selectableItemBackground"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/conversation_other_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/conversation_placeholder_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/conversation_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textAlignment="viewEnd"
                android:text="@string/conversation_placeholder_timestamp"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/conversation_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/conversation_placeholder_preview"/>

</LinearLayout>