<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/bottom_navigation_height">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/edit_textbook_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/textbook_image_description"
                android:layout_centerHorizontal="true"
                android:maxHeight="300dp"
                android:maxWidth="150dp" />

            <Button
                android:id="@+id/edit_textbook_choose_button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:background="@drawable/button_blue"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/edit_textbook_imageview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/choose_image_button_text"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edit_textbook_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="16"
                android:hint="@string/title_hint"
                android:inputType="textCapSentences"
                android:layout_below="@id/edit_textbook_choose_button"
                android:layout_marginTop="10dp"
                android:maxLength="60"
                android:padding="10dp"
                android:textColorHint="@color/lightGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_textbook_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="16"
                android:hint="@string/author_hint"
                android:inputType="textCapSentences"
                android:layout_below="@id/edit_textbook_title"
                android:layout_marginTop="5dp"
                android:maxLength="60"
                android:padding="10dp"
                android:textColorHint="@color/lightGray"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/edit_textbook_edition_layout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/border"
                android:layout_alignEnd="@id/edit_textbook_title"
                android:layout_alignLeft="@id/edit_textbook_title"
                android:layout_alignRight="@id/edit_textbook_title"
                android:layout_alignStart="@id/edit_textbook_title"
                android:layout_below="@id/edit_textbook_author"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <Spinner
                    android:id="@+id/edit_textbook_edition_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/edit_textbook_condition_layout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/border"
                android:layout_alignEnd="@id/edit_textbook_title"
                android:layout_alignLeft="@id/edit_textbook_title"
                android:layout_alignRight="@id/edit_textbook_title"
                android:layout_alignStart="@id/edit_textbook_title"
                android:layout_below="@id/edit_textbook_edition_layout"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <Spinner
                    android:id="@+id/edit_textbook_condition_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/edit_textbook_type_layout"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/border"
                android:layout_alignEnd="@id/edit_textbook_title"
                android:layout_alignLeft="@id/edit_textbook_title"
                android:layout_alignRight="@id/edit_textbook_title"
                android:layout_alignStart="@id/edit_textbook_title"
                android:layout_below="@id/edit_textbook_condition_layout"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <Spinner
                    android:id="@+id/edit_textbook_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </RelativeLayout>

            <EditText
                android:id="@+id/edit_textbook_coursecode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="16"
                android:hint="@string/course_hint"
                android:inputType="textCapSentences"
                android:layout_below="@id/edit_textbook_type_layout"
                android:layout_marginTop="5dp"
                android:maxLength="8"
                android:padding="10dp"
                android:textColorHint="@color/lightGray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_textbook_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:ems="16"
                android:hint="@string/price_hint"
                android:inputType="textCapSentences"
                android:layout_below="@id/edit_textbook_coursecode"
                android:layout_marginTop="5dp"
                android:maxLength="3"
                android:padding="10dp"
                android:textColorHint="@color/lightGray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/edit_textbook_save_button"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@drawable/button_blue"
                android:clickable="true"
                android:focusable="true"
                android:layout_below="@id/edit_textbook_price"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/save_button_text"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
